Call delay_show Cancel in ScrollbarAnimationControlller::Show

This issue is caused by TaskRunner not set delay event cancel after execute. So
we need to call Cancel manually on ScrollbarAnimationControlller::Show.

We also add a Cancel in ScrollbarAnimationControlller::DidMouseLeave.

BUG=698352
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2735603002
Cr-Commit-Position: refs/heads/master@{#455125}

Former-commit-id: 56c267d43381c48f5fc1d1acf43550e2cd3e759a